adding new data 1)static wit Ie_facotr=3 2) dynamic,n_phase = 3

--- a/neuron_data/check_data.ipynb
+++ b/neuron_data/check_data.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import scipy.sparse as sparse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,22 +21,22 @@
     "#conn  = np.load('conn_train_LIF_neurons100_p_exc0.8_epsilon0.1_len15000.npy')\n",
     "\n",
     "\n",
-    "conn = np.load('conn_train_LIF_neurons50_p_exc0.8_epsilon0.2_len15000.npy')\n",
-    "spkmat = np.load('spkmat_train_LIF_neurons50_p_exc0.8_epsilon0.2_len15000.npy')"
+    "conn = sparse.load_npz('conn_valid_LIF_neurons12_p_exc0.5_epsilon0.1_len45000.npz')\n",
+    "spkmat = sparse.load_npz('spkmat_train_LIF_neurons12_p_exc0.5_epsilon0.1_len45000.npz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 15000, 50)"
+       "(500, 540000)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 50, 50)"
+       "(50, 144)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,6 +109,47 @@
    "source": [
     "plt.imshow(conn[0,:,:])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'75'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "str(np.random.randint(1,100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NestData73'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'NestData'+str(np.random.randint(1,100))"
    ]
   },
   {
